--- a/musicvideo.html
+++ b/musicvideo.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <title>CHARLIE PUTH | Music + Video | Fan made website</title>
   <meta charset="utf-8" />
@@ -15,13 +14,11 @@
   <link rel="shortcut icon" href="favicon.png" type="image/png">
   <!-- tailwind cdn -->
   <script src="https://cdn.tailwindcss.com"></script>
-
   <!-- loader css -->
   <style>
-    /* body{
+    body{
             background-color: black ;
         }
-         */
     #preloader {
       height: 300px;
       width: 300px;
@@ -32,16 +29,12 @@
       bottom: 0;
       left: 0;
       right: 0;
-
     }
-
     #preloader img {
       width: 300px;
     }
-
     #fullpagecontent {
       display: none;
-
     }
   </style>
   <script>
@@ -50,11 +43,8 @@
       document.getElementById('fullpagecontent').style.display = "block";
     }
   </script>
-
 </head>
-
-<body class="homepage ">
-
+<body class="homepage">
   <div id="preloader">
     <!-- <img src="photos/logoTUD.png" alt="loader"> -->
     <!-- <h2> ooh ur still alive</h2> -->
@@ -62,12 +52,9 @@
   </div>
   <!-- this is loader div for content -->
   <div id="fullpagecontent">
-
     <!-- <div id="page-wrapper"> -->
-
     <!-- Header -->
     <div id="header">
-
       <!-- Inner -->
       <div class="inner">
         <header>
@@ -75,7 +62,6 @@
           <img style="width: 20rem;" src="images/andVideos-desktop.gif" alt="" id="logo">
         </header>
       </div>
-
       <!-- Nav -->
       <nav id="nav">
         <ul>
@@ -115,28 +101,32 @@
           </li>
         </ul>
       </nav>
-
     </div>
-
-
     <div class="bg-black text-gray-100">
       <div class="max-w-2xl mx-auto py-16 px-4 sm:py-24 sm:px-6 lg:max-w-7xl lg:px-8">
         <!-- <h2 class="sr-only">Albums</h2> -->
         <!-- <h2 style="margin: auto; font-size: 2rem; text-align: center; color: white;">Albums</h2> -->
-
         <div class="grid grid-cols-1 gap-y-10 sm:grid-cols-2 gap-x-6 lg:grid-cols-3 xl:grid-cols-4 xl:gap-x-8">
-
+          <a href="https://charlieputh.lnk.to/LipstickAW" target="_blank" class="group">
+            <div
+            class="w-full aspect-w-1 aspect-h-1 bg-gray-200 rounded-lg overflow-hidden xl:aspect-w-7 xl:aspect-h-8">
+            <img src="images/lipstick-art.jfif"
+            alt="Tall slender porcelain bottle with natural clay textured body and cork stopper."
+            class="w-full h-full object-center object-cover group-hover:opacity-75">
+          </div>
+          <h3 class="mt-4 text-sm text-gray-100">CHARLIE PUTH</h3>
+          <p class="mt-1 text-lg font-medium text-gray-100">Lipstick</p>
+        </a>
           <a href="CHARLIE.html" class="group">
             <div
-              class="w-full aspect-w-1 aspect-h-1 bg-gray-200 rounded-lg overflow-hidden xl:aspect-w-7 xl:aspect-h-8">
-              <img src="images/charlie-album-art.png"
-                alt="Tall slender porcelain bottle with natural clay textured body and cork stopper."
-                class="w-full h-full object-center object-cover group-hover:opacity-75">
-            </div>
-            <h3 class="mt-4 text-sm text-gray-100">CHARLIE PUTH</h3>
-            <p class="mt-1 text-lg font-medium text-gray-100">CHARLIE</p>
-          </a>
-
+            class="w-full aspect-w-1 aspect-h-1 bg-gray-200 rounded-lg overflow-hidden xl:aspect-w-7 xl:aspect-h-8">
+            <img src="images/charlie-album-art.png"
+            alt="Tall slender porcelain bottle with natural clay textured body and cork stopper."
+            class="w-full h-full object-center object-cover group-hover:opacity-75">
+          </div>
+          <h3 class="mt-4 text-sm text-gray-100">CHARLIE PUTH</h3>
+          <p class="mt-1 text-lg font-medium text-gray-100">CHARLIE</p>
+        </a>
           <a href="voicenotes.html" class="group">
             <div
               class="w-full aspect-w-1 aspect-h-1 bg-gray-200 rounded-lg overflow-hidden xl:aspect-w-7 xl:aspect-h-8">
@@ -146,7 +136,6 @@
             <h3 class="mt-4 text-sm text-gray-100">CHARLIE PUTH</h3>
             <p class="mt-1 text-lg font-medium text-gray-100">Voicenotes</p>
           </a>
-
           <a href="ninetrackmind.html" class="group">
             <div
               class="w-full aspect-w-1 aspect-h-1 bg-gray-200 rounded-lg overflow-hidden xl:aspect-w-7 xl:aspect-h-8">
@@ -157,7 +146,6 @@
             <h3 class="mt-4 text-sm text-gray-100">CHARLIE PUTH</h3>
             <p class="mt-1 text-lg font-medium text-gray-100">Nine Track Mind (Deluxe)</p>
           </a>
-
           <!-- <a href="sometypeoflove.html" class="group">
             <div
               class="w-full aspect-w-1 aspect-h-1 bg-gray-200 rounded-lg overflow-hidden xl:aspect-w-7 xl:aspect-h-8">
@@ -168,77 +156,9 @@
             <h3 class="mt-4 text-sm text-gray-100">CHARLIE PUTH</h3>
             <p class="mt-1 text-lg font-medium text-gray-100">Some Type Of Love EP</p>
           </a> -->
-
-
-          <!-- <a href="leftandright.html" class="group">
-            <div
-              class="w-full aspect-w-1 aspect-h-1 bg-gray-200 rounded-lg overflow-hidden xl:aspect-w-7 xl:aspect-h-8">
-              <img src="images/leftandrightdp.png"
-                alt="Tall slender porcelain bottle with natural clay textured body and cork stopper."
-                class="w-full h-full object-center object-cover group-hover:opacity-75">
-            </div>
-            <h3 class="mt-4 text-sm text-gray-100">CHARLIE PUTH</h3>
-            <p class="mt-1 text-lg font-medium text-gray-100">Left And Right (feat. Jung Kook of BTS)</p>
-          </a> -->
-
-          <!-- <a href="thatshilarious.html" class="group">
-            <div
-            class="w-full aspect-w-1 aspect-h-1 bg-gray-200 rounded-lg overflow-hidden xl:aspect-w-7 xl:aspect-h-8">
-            <img src="cpphotos/thahilarious.jfif"
-            alt="Tall slender porcelain bottle with natural clay textured body and cork stopper."
-            class="w-full h-full object-center object-cover group-hover:opacity-75">
-            </div>
-            <h3 class="mt-4 text-sm text-gray-100">CHARLIE PUTH</h3>
-            <p class="mt-1 text-lg font-medium text-gray-100">That's Hilarious</p>
-          </a> -->
-
-
-          <!-- <a href="lightswitch.html" class="group">
-            <div
-            class="w-full aspect-w-1 aspect-h-1 bg-gray-200 rounded-lg overflow-hidden xl:aspect-w-7 xl:aspect-h-8">
-            <img src="cpphotos/LIGHTSWITCH.png"
-            alt="Tall slender porcelain bottle with natural clay textured body and cork stopper."
-            class="w-full h-full object-center object-cover group-hover:opacity-75">
-          </div>
-          <h3 class="mt-4 text-sm text-gray-100">CHARLIE PUTH</h3>
-          <p class="mt-1 text-lg font-medium text-gray-100">Light Switch</p>
-        </a> -->
-
-          <!-- 
-          <a href="ihope.html" class="group">
-            <div
-            class="w-full aspect-w-1 aspect-h-1 bg-gray-200 rounded-lg overflow-hidden xl:aspect-w-7 xl:aspect-h-8">
-            <img src="cpphotos/i hope.jpg" alt="Person using a pen to cross a task off a productivity paper card."
-            class="w-full h-full object-center object-cover group-hover:opacity-75">
-          </div>
-          <h3 class="mt-4 text-sm text-gray-100">CHARLIE PUTH</h3>
-          <p class="mt-1 text-lg font-medium text-gray-100">I Hope</p>
-        </a> -->
-          <!-- 
-          <a href="other.html" class="group">
-            <div
-            class="w-full aspect-w-1 aspect-h-1 bg-gray-200 rounded-lg overflow-hidden xl:aspect-w-7 xl:aspect-h-8">
-            <img src="cpphotos/cpp.jpg" alt="Olive drab green insulated bottle with flared screw lid and flat top."
-            class="w-full h-full object-center object-cover group-hover:opacity-75">
-          </div>
-          <h3 class="mt-4 text-sm text-gray-100">CHARLIE PUTH</h3>
-          <p class="mt-1 text-lg font-medium text-gray-100">Singles & Others</p>
-        </a> -->
-
-          <!-- <a href="free.html" class="group">
-          <div
-          class="w-full aspect-w-1 aspect-h-1 bg-gray-200 rounded-lg overflow-hidden xl:aspect-w-7 xl:aspect-h-8">
-          <img src="cpphotos/free.jpg" alt="Person using a pen to cross a task off a productivity paper card."
-          class="w-full h-full object-center object-cover group-hover:opacity-75">
-        </div>
-        <h3 class="mt-4 text-sm text-gray-100">CHARLIE PUTH</h3>
-        <p class="mt-1 text-lg font-medium text-gray-100">Free</p>
-        </a> -->
         </div>
       </div>
     </div>
-
-
     <div style="background-color: white;">
       <img src="images/Singles-desktop.gif" alt="">
     </div>
@@ -246,7 +166,6 @@
       <div class="max-w-2xl mx-auto py-16 px-4 sm:py-24 sm:px-6 lg:max-w-7xl lg:px-8">
         <!-- <h2 class="sr-only">Albums</h2> -->
         <!-- <h2 style="margin: auto; font-size: 2rem; text-align: center; color: white;">Albums</h2> -->
-
         <div class="grid grid-cols-1 gap-y-10 sm:grid-cols-2 gap-x-6 lg:grid-cols-3 xl:grid-cols-4 xl:gap-x-8">
           <a href="https://charlieputh.lnk.to/TNHTWSabrinasVersion!PA" target="_blank" class="group">
             <div
@@ -266,7 +185,6 @@
             <h3 class="mt-4 text-sm text-gray-100">CHARLIE PUTH</h3>
             <p class="mt-1 text-lg font-medium text-gray-100">THAT'S NOT HOW THIS WORKS (FEAT. DAN + SHAY)</p>
           </a>
-
           <a href="https://charlieputh.lnk.to/HardOnYourselfAW" target="_blank" class="group">
             <div
               class="w-full aspect-w-1 aspect-h-1 bg-gray-200 rounded-lg overflow-hidden xl:aspect-w-7 xl:aspect-h-8">
@@ -276,7 +194,6 @@
             <h3 class="mt-4 text-sm text-gray-100">CHARLIE PUTH</h3>
             <p class="mt-1 text-lg font-medium text-gray-100">Hard On Yourself</p>
           </a>
-
           <a href="https://charlieputh.lnk.to/GirlfriendAW" target="_blank" class="group">
             <div
               class="w-full aspect-w-1 aspect-h-1 bg-gray-200 rounded-lg overflow-hidden xl:aspect-w-7 xl:aspect-h-8">
@@ -287,8 +204,6 @@
             <h3 class="mt-4 text-sm text-gray-100">CHARLIE PUTH</h3>
             <p class="mt-1 text-lg font-medium text-gray-100">Girlfriend</p>
           </a>
-
-
           <a href="https://charlieputh.lnk.to/MotherAW" target="_blank" class="group">
             <div
               class="w-full aspect-w-1 aspect-h-1 bg-gray-200 rounded-lg overflow-hidden xl:aspect-w-7 xl:aspect-h-8">
@@ -298,7 +213,6 @@
             <h3 class="mt-4 text-sm text-gray-100">CHARLIE PUTH</h3>
             <p class="mt-1 text-lg font-medium text-gray-100">Mother</p>
           </a>
-
           <a href="https://charlieputh.lnk.to/CheatingOnYouAW" target="_blank" class="group">
             <div
               class="w-full aspect-w-1 aspect-h-1 bg-gray-200 rounded-lg overflow-hidden xl:aspect-w-7 xl:aspect-h-8">
@@ -309,7 +223,6 @@
             <h3 class="mt-4 text-sm text-gray-100">CHARLIE PUTH</h3>
             <p class="mt-1 text-lg font-medium text-gray-100">Cheating On You</p>
           </a>
-
           <a href="https://charlieputh.lnk.to/iwarnedmyselfAW" target="_blank" class="group">
             <div
               class="w-full aspect-w-1 aspect-h-1 bg-gray-200 rounded-lg overflow-hidden xl:aspect-w-7 xl:aspect-h-8">
@@ -320,7 +233,6 @@
             <h3 class="mt-4 text-sm text-gray-100">CHARLIE PUTH</h3>
             <p class="mt-1 text-lg font-medium text-gray-100">I Warned Myself</p>
           </a>
-
           <a href="https://atlantic.lnk.to/SeeYouAgainAW" target="_blank" class="group">
             <div
               class="w-full aspect-w-1 aspect-h-1 bg-gray-200 rounded-lg overflow-hidden xl:aspect-w-7 xl:aspect-h-8">
@@ -331,85 +243,14 @@
             <h3 class="mt-4 text-sm text-gray-100">CHARLIE PUTH</h3>
             <p class="mt-1 text-lg font-medium text-gray-100">See You Again</p>
           </a>
-
         </div>
       </div>
     </div>
-
-
-    <div style="background-color: black;">
-      <div style="margin: auto; text-align: center;">
-        <img style="height: 10rem;" src="images/Merch-horizontalDesktop.gif" alt="">
-      </div>
-      <div class="max-w-2xl mx-auto py-16 px-4 sm:py-24 sm:px-6 lg:max-w-7xl lg:px-8">
-        <!-- <h2 class="sr-only">Albums</h2> -->
-
-        <div class="grid grid-cols-1 gap-y-10 sm:grid-cols-2 gap-x-6 lg:grid-cols-3 xl:grid-cols-4 xl:gap-x-8">
-
-
-          <a href="https://shop.charlieputh.com/" target="_blank" class="group">
-            <div
-              class="w-full aspect-w-1 aspect-h-1 bg-gray-200 rounded-lg overflow-hidden xl:aspect-w-7 xl:aspect-h-8">
-
-              <img src="images/merch-charlie.gif" alt="Charlie Merch."
-                class="w-full h-full object-center object-cover group-hover:opacity-75">
-            </div>
-            <!-- <span style="margin-top: 10px;" class="mt-4 text-sm text-gray-100">ORDER NOW</span> -->
-            <p class="mt-1 text-lg font-medium text-gray-100">shop.charlieputh.com
-            </p>
-          </a>
-
-          <a href="https://shop.charlieputh.com/products/charlie-left-and-right-t-shirt-cd-boxset" target="_blank"
-            class="group">
-            <div
-              class="w-full aspect-w-1 aspect-h-1 bg-gray-200 rounded-lg overflow-hidden xl:aspect-w-7 xl:aspect-h-8">
-
-              <img src="images/CP-Charlie_ProductImages-Boxset2_576x.png" alt="Charlie Merch."
-                class="w-full h-full object-center object-cover group-hover:opacity-75">
-            </div>
-            <span style="margin-top: 10px;" class="mt-4 text-sm text-gray-100">ORDER NOW</span>
-            <p class="mt-1 text-lg font-medium text-gray-100">CHARLIE Left and Right T-Shirt CD Boxset</p>
-          </a>
-
-          <a href="https://shop.charlieputh.com/products/charlie-puth-feat-jung-kook-of-bts-limited-edition-cd"
-            target="_blank" class="group">
-            <div
-              class="w-full aspect-w-1 aspect-h-1 bg-gray-200 rounded-lg overflow-hidden xl:aspect-w-7 xl:aspect-h-8">
-
-              <img src="images/061422_CP-LR_Mailer-CD.gif" alt="Charlie Merch."
-                class="w-full h-full object-center object-cover group-hover:opacity-75">
-            </div>
-            <span style="margin-top: 10px;" class="mt-4 text-sm text-gray-100">ORDER NOW</span>
-            <p class="mt-1 text-lg font-medium text-gray-100">Charlie Puth Left and Right (feat. Jung Kook
-              of BTS) Limited Edition CD Single</p>
-          </a>
-
-          <a href="https://shop.charlieputh.com/products/charlie-standard-cd" target="_blank" class="group">
-            <div
-              class="w-full aspect-w-1 aspect-h-1 bg-gray-200 rounded-lg overflow-hidden xl:aspect-w-7 xl:aspect-h-8">
-
-              <img src="images/070522_CP-Charlie_ProductImages-Music_Jewelcase_360x.png" alt="Charlie Merch."
-                class="w-full h-full object-center object-cover group-hover:opacity-75">
-            </div>
-            <span style="margin-top: 10px;" class="mt-4 text-sm text-gray-100">ORDER NOW</span>
-            <p class="mt-1 text-lg font-medium text-gray-100">CHARLIE Standard CD</p>
-          </a>
-
-        </div>
-      </div>
-    </div>
-
-
-
-
-
-
     <!-- footer -->
-
     <div style="background-color: black;" class="flex items-center justify-center">
       <div class="m-2 max-w-5xl items-center">
         <div class="flex flex-col items-center"> <img style="width: 10rem;" class="flex m-1"
-            src="images/charlie_white_0.png" />
+            src="images/cp.gif" />
           <div class="m-2" 0>
 
             <a href="https://www.facebook.com/charlieputh" target="_blank"
@@ -432,16 +273,13 @@
               target="_blank"
               class="w-9 h-10 text-center border-current border-2 text-rose-600 hover:text-black pt-1 inline-block"><img
                 src="cpphotos/logos/apple-music-removebg-preview.png" alt=""></a>
-
-
           </div>
           <div class="flex md:flex-row flex-col">
             <p class="hover:text-blue-600 text-gray-500 font-medium m-2"> <a href="index.html">Home</a> </p>
-            <p class="hover:text-blue-600 text-gray-500 font-medium m-2"> <a href="charlieputhbio.html">Bio</a> </p>
             <p class="hover:text-blue-600 text-gray-500 font-medium m-2"> <a href="musicvideo.html">Music +
                 Video</a> </p>
             <p class="hover:text-blue-600 text-gray-500 font-medium m-2"> <a href="https://www.theuniversaldev.42web.io"
-                target="_blank">Contact Us</a> </p>
+                target="_blank">Contact Dev</a> </p>
             <!-- <p class="hover:text-blue-600 text-gray-500 font-medium m-2"> <a href="#"> Privacy Policy </a> </p> -->
           </div>
           <div style="text-align: center;" class="text-gray-100 font-medium mt-4 text-xs">&copy;
@@ -461,10 +299,7 @@
     <script src="https://use.fontawesome.com/03f8a0ebd4.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
   </div>
-
-
   </div>
-
   <!-- Scripts -->
   <script src="assets/js/jquery.min.js"></script>
   <script src="assets/js/jquery.dropotron.min.js"></script>
@@ -474,7 +309,5 @@
   <script src="assets/js/breakpoints.min.js"></script>
   <script src="assets/js/util.js"></script>
   <script src="assets/js/main.js"></script>
-
 </body>
-
 </html>
