--- a/voicenotes.html
+++ b/voicenotes.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <title>CHARLIE PUTH | Voicenotes | Fan made website</title>
     <meta charset="utf-8" />
@@ -15,13 +14,12 @@
     <link rel="shortcut icon" href="favicon.png" type="image/png">
     <!-- tailwind cdn -->
     <script src="https://cdn.tailwindcss.com"></script>
-
     <!-- loader css -->
     <style>
-        /* body{
+        body{
             background-color: black ;
         }
-         */
+        
         #preloader {
             height: 300px;
             width: 300px;
@@ -32,16 +30,13 @@
             bottom: 0;
             left: 0;
             right: 0;
-
         }
 
         #preloader img {
             width: 300px;
         }
-
         #fullpagecontent {
             display: none;
-
         }
     </style>
     <script>
@@ -50,11 +45,8 @@
             document.getElementById('fullpagecontent').style.display = "block";
         }
     </script>
-
 </head>
-
 <body class="homepage ">
-
     <div id="preloader">
         <!-- <img src="photos/logoTUD.png" alt="loader"> -->
         <!-- <h2> ooh ur still alive</h2> -->
@@ -62,19 +54,15 @@
     </div>
     <!-- this is loader div for content -->
     <div id="fullpagecontent">
-
         <!-- <div id="page-wrapper"> -->
-
         <!-- Header -->
         <div id="header">
-
             <!-- Inner -->
             <div class="inner">
                 <header>
-                    <img style="width: 20rem;" src="images/Voicenotes-desktop.gif" alt="" id="logo">
+                    <img style="width: 20rem;" src="images/output-onlinepngtools.png" alt="" id="logo">
                 </header>
             </div>
-
             <!-- Nav -->
             <nav id="nav">
                 <ul>
@@ -152,8 +140,6 @@
             </div>
 
 
-
-
             <div style="text-align: center; background-color: black; margin-top: 1%;">
                 <h3 class="text-gray-100 text-lg py-px">3.Charlie Puth - LA Girls [Official Audio]</h3>
                 <iframe width="100%" height="480" src="https://www.youtube.com/embed/iW3Than5jrs"
@@ -171,8 +157,6 @@
             </div>
 
 
-
-
             <div style="text-align: center; background-color: black; margin-top: 1%;">
                 <h3 class="text-gray-100 text-lg py-px">4.Charlie Puth - "How Long" [Official Video]</h3>
                 <iframe width="100%" height="480" src="https://www.youtube.com/embed/CwfoyVa980U"
@@ -188,8 +172,6 @@
                     </button>
                 </div>
             </div>
-
-
 
 
             <div style="text-align: center; background-color: black; margin-top: 1%;">
@@ -210,8 +192,6 @@
             </div>
 
 
-
-
             <div style="text-align: center; background-color: black; margin-top: 1%;">
                 <h3 class="text-gray-100 text-lg py-px">6.Charlie Puth - Patient [Official Audio]</h3>
                 <iframe width="100%" height="480" src="https://www.youtube.com/embed/uKmA0nHe4no"
@@ -227,8 +207,6 @@
                     </button>
                 </div>
             </div>
-
-
 
 
             <div style="text-align: center; background-color: black; margin-top: 1%;">
@@ -251,8 +229,6 @@
             </div>
 
 
-
-
             <div style="text-align: center; background-color: black; margin-top: 1%;">
                 <h3 class="text-gray-100 text-lg py-px">8.Charlie Puth - BOY [Official Audio]</h3>
                 <iframe width="100%" height="480" src="https://www.youtube.com/embed/iILJvqrAQ_w"
@@ -270,8 +246,6 @@
             </div>
 
 
-
-
             <div style="text-align: center; background-color: black; margin-top: 1%;">
                 <h3 class="text-gray-100 text-lg py-px">9.Charlie Puth - Slow It Down [Official Audio]</h3>
                 <iframe width="100%" height="480" src="https://www.youtube.com/embed/JFVtb5_Pec4"
@@ -287,8 +261,6 @@
                     </button>
                 </div>
             </div>
-
-
 
 
             <div style="text-align: center; background-color: black; margin-top: 1%;">
@@ -309,8 +281,6 @@
             </div>
 
 
-
-
             <div style="text-align: center; background-color: black; margin-top: 1%;">
                 <h3 class="text-gray-100 text-lg py-px">11.Charlie Puth - Somebody Told Me [Official Audio]</h3>
                 <iframe width="100%" height="480" src="https://www.youtube.com/embed/uIpZY56noT8"
@@ -327,9 +297,6 @@
                 </div>
             </div>
 
-
-
-
             <div style="text-align: center; background-color: black; margin-top: 1%;">
                 <h3 class="text-gray-100 text-lg py-px">12.Charlie Puth - Empty Cups [Official Audio]]</h3>
                 <iframe width="100%" height="480" src="https://www.youtube.com/embed/WTjddKXBNwQ"
@@ -345,9 +312,6 @@
                     </button>
                 </div>
             </div>
-
-
-
 
             <div style="text-align: center; background-color: black; margin-top: 1%;">
                 <h3 class="text-gray-100 text-lg py-px">13.Charlie Puth - Through It All [Official Audio]</h3>
@@ -367,13 +331,11 @@
 
         </div>
 
-
         <!-- footer -->
-
         <div style="background-color: black;" class="flex items-center justify-center">
             <div class="m-2 max-w-5xl items-center">
                 <div class="flex flex-col items-center"> <img style="width: 10rem;" class="flex m-1"
-                        src="images/charlie_white_0.png" />
+                        src="images/cp.gif" />
                     <div class="m-2" 0>
 
                         <a href="https://www.facebook.com/charlieputh" target="_blank"
@@ -396,17 +358,14 @@
                             target="_blank"
                             class="w-9 h-10 text-center border-current border-2 text-rose-600 hover:text-black pt-1 inline-block"><img
                                 src="cpphotos/logos/apple-music-removebg-preview.png" alt=""></a>
-
-
                     </div>
                     <div class="flex md:flex-row flex-col">
                         <p class="hover:text-blue-600 text-gray-500 font-medium m-2"> <a href="index.html">Home</a> </p>
-                        <p class="hover:text-blue-600 text-gray-500 font-medium m-2"> <a
-                                href="charlieputhbio.html">Bio</a> </p>
                         <p class="hover:text-blue-600 text-gray-500 font-medium m-2"> <a href="musicvideo.html">Music +
                                 Video</a> </p>
+                                <p class="hover:text-blue-600 text-gray-500 font-medium m-2"> <a href="writen-by-CP.html">Written By Charlie Puth</a></p>
                         <p class="hover:text-blue-600 text-gray-500 font-medium m-2"> <a
-                                href="https://www.theuniversaldev.42web.io" target="_blank">Contact Us</a> </p>
+                                href="https://www.theuniversaldev.42web.io" target="_blank">Contact Dev</a> </p>
                         <!-- <p class="hover:text-blue-600 text-gray-500 font-medium m-2"> <a href="#"> Privacy Policy </a> </p> -->
                     </div>
                     <div style="text-align: center;" class="text-gray-100 font-medium mt-4 text-xs">&copy;
@@ -425,11 +384,7 @@
         </div>
         <script src="https://use.fontawesome.com/03f8a0ebd4.js"></script>
         <script src="https://cdn.tailwindcss.com"></script>
-
     </div>
-
-
-
     <!-- Scripts -->
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/jquery.dropotron.min.js"></script>
@@ -439,7 +394,5 @@
     <script src="assets/js/breakpoints.min.js"></script>
     <script src="assets/js/util.js"></script>
     <script src="assets/js/main.js"></script>
-
 </body>
-
 </html>
