--- a/writen-by-CP.html
+++ b/writen-by-CP.html
@@ -18,10 +18,10 @@
 
 	<!-- loader css -->
 	<style>
-		/* body{
+		body{
             background-color: black ;
         }
-         */
+        
 		#preloader {
 			height: 300px;
 			width: 300px;
@@ -32,16 +32,12 @@
 			bottom: 0;
 			left: 0;
 			right: 0;
-
 		}
-
 		#preloader img {
 			width: 300px;
 		}
-
 		#fullpagecontent {
 			display: none;
-
 		}
 	</style>
 	<script>
@@ -50,9 +46,7 @@
 			document.getElementById('fullpagecontent').style.display = "block";
 		}
 	</script>
-
 </head>
-
 <body class="homepage ">
 
 	<div id="preloader">
@@ -119,10 +113,10 @@
 
 		<iframe id='AmazonMusicEmbedB09JGFW84S'
 			src='https://music.amazon.in/embed/B09JGFW84S/?id=4PtNhhIHK5&marketplaceId=A3K6Y4MI8GDYMT&musicTerritory=IN'
-			width='100%' height='3650px' style="border:0px solid rgba(0, 0, 0, 0.12);"></iframe>
+			width='100%' height='4500px' style="border:0px solid rgba(0, 0, 0, 0.12);"></iframe>
 
 		<iframe src="https://open.spotify.com/embed/playlist/05p6ISeMzQo37aChgZxTYk?utm_source=generator&theme=0"
-			width="100%" height="2100" frameBorder="0" allowfullscreen=""
+			width="100%" height="2350" frameBorder="0" allowfullscreen=""
 			allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 
 
@@ -131,7 +125,7 @@
 		<div style="background-color: black;" class="flex items-center justify-center">
 			<div class="m-2 max-w-5xl items-center">
 				<div class="flex flex-col items-center"> <img style="width: 10rem;" class="flex m-1"
-						src="images/charlie_white_0.png" />
+						src="images/cp.gif" />
 					<div class="m-2" 0>
 
 						<a href="https://www.facebook.com/charlieputh" target="_blank"
@@ -159,12 +153,11 @@
 					</div>
 					<div class="flex md:flex-row flex-col">
 						<p class="hover:text-blue-600 text-gray-500 font-medium m-2"> <a href="index.html">Home</a> </p>
-						<p class="hover:text-blue-600 text-gray-500 font-medium m-2"> <a
-								href="charlieputhbio.html">Bio</a> </p>
 						<p class="hover:text-blue-600 text-gray-500 font-medium m-2"> <a href="musicvideo.html">Music +
 								Video</a> </p>
+								<p class="hover:text-blue-600 text-gray-500 font-medium m-2"> <a href="#">Written By Charlie Puth</a></p>
 						<p class="hover:text-blue-600 text-gray-500 font-medium m-2"> <a
-								href="https://www.theuniversaldev.42web.io" target="_blank">Contact Us</a> </p>
+								href="https://www.theuniversaldev.42web.io" target="_blank">Contact Dev</a> </p>
 						<!-- <p class="hover:text-blue-600 text-gray-500 font-medium m-2"> <a href="#"> Privacy Policy </a> </p> -->
 					</div>
 					<div style="text-align: center;" class="text-gray-100 font-medium mt-4 text-xs">&copy;
