--- a/CHARLIE.html
+++ b/CHARLIE.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <title>CHARLIE PUTH | CHARLIE | Fan made website</title>
     <meta charset="utf-8" />
@@ -15,13 +14,11 @@
     <link rel="shortcut icon" href="favicon.png" type="image/png">
     <!-- tailwind cdn -->
     <script src="https://cdn.tailwindcss.com"></script>
-
     <!-- loader css -->
     <style>
-        /* body{
+        body{
             background-color: black ;
         }
-         */
         #preloader {
             height: 300px;
             width: 300px;
@@ -32,16 +29,12 @@
             bottom: 0;
             left: 0;
             right: 0;
-
         }
-
         #preloader img {
             width: 300px;
         }
-
         #fullpagecontent {
             display: none;
-
         }
     </style>
     <script>
@@ -50,11 +43,8 @@
             document.getElementById('fullpagecontent').style.display = "block";
         }
     </script>
-
 </head>
-
 <body class="homepage ">
-
     <div id="preloader">
         <!-- <img src="photos/logoTUD.png" alt="loader"> -->
         <!-- <h2> ooh ur still alive</h2> -->
@@ -62,12 +52,9 @@
     </div>
     <!-- this is loader div for content -->
     <div id="fullpagecontent">
-
         <!-- <div id="page-wrapper"> -->
-
         <!-- Header -->
         <div id="header">
-
             <!-- Inner -->
             <div class="inner">
                 <header>
@@ -75,7 +62,6 @@
                     <img style="width: 20rem;" src="images/Charlie.gif" alt="" id="logo">
                 </header>
             </div>
-
             <!-- Nav -->
             <nav id="nav">
                 <ul>
@@ -85,7 +71,6 @@
                         <a href="musicvideo.html">Music + Video</a>
                         <!-- <ul>
                             <li><a href="musicvideo.html">Music + Video</a></li>
-
                             <li>
                                 <a href="#">Albums &#8594;</a>
 
@@ -115,65 +100,47 @@
                     </li>
                 </ul>
             </nav>
-
         </div>
-
         <div style="background-color:black;">
-
             <div style="text-align: center; background-color: black;">
                 <h3 class="text-gray-100 text-lg py-px">1.Charlie Puth - That's Hilarious [Official Video]</h3>
                 <iframe width="100%" height="498" src="https://www.youtube.com/embed/Nq3x1AkwgpY"
                     title="Charlie Puth - That's Hilarious [Official Video]" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
-
                 <div style="text-align: center; margin-top: 1%; margin: auto;">
-
                     <a href="https://charlieputh.lnk.to/CHARLIEID" target="_blank">
                         <button class="getitnow">
                             <span>GET IT NOW</a></span>
                     </button>
                 </div>
             </div>
-
             <div style="text-align: center; background-color: black; margin-top: 1%;">
                 <h3 class="text-gray-100 text-lg py-px">2.Charlie Puth - Charlie Be Quiet! (Official Audio)</h3>
                 <iframe width="100%" height="498" src="https://www.youtube.com/embed/vo_XZmKlJ3A"
                     title="Charlie Puth - Charlie Be Quiet! (Official Audio)" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
-
                 <div style="text-align: center; margin-top: 1%; margin: auto;">
-
                     <a href="https://charlieputh.lnk.to/CHARLIEID" target="_blank">
                         <button class="getitnow">
                             <span>GET IT NOW</a></span>
                     </button>
                 </div>
             </div>
-
-
-
-
             <div style="text-align: center; background-color: black; margin-top: 1%;">
                 <h3 class="text-gray-100 text-lg py-px">3.Charlie Puth - Light Switch [Official Music Video]</h3>
                 <iframe width="100%" height="498" src="https://www.youtube.com/embed/WFsAon_TWPQ"
                     title="Charlie Puth - Light Switch [Official Music Video]" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
-
                 <div style="text-align: center; margin-top: 1%; margin: auto;">
-
                     <a href="https://charlieputh.lnk.to/CHARLIEID" target="_blank">
                         <button class="getitnow">
                             <span>GET IT NOW</a></span>
                     </button>
                 </div>
             </div>
-
-
-
-
             <div style="text-align: center; background-color: black; margin-top: 1%;">
                 <h3 class="text-gray-100 text-lg py-px">4.Charlie Puth - There's A First Time For Everything (Official
                     Audio)</h3>
@@ -181,7 +148,6 @@
                     title="Charlie Puth - There's A First Time For Everything (Official Audio)" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
-
                 <div style="text-align: center; margin-top: 1%; margin: auto;">
 
                     <a href="https://charlieputh.lnk.to/CHARLIEID" target="_blank">
@@ -190,29 +156,19 @@
                     </button>
                 </div>
             </div>
-
-
-
-
             <div style="text-align: center; background-color: black; margin-top: 1%;">
                 <h3 class="text-gray-100 text-lg py-px">5.Charlie Puth - Smells Like Me (Official Audio)</h3>
                 <iframe width="100%" height="498" src="https://www.youtube.com/embed/KyBHXjh0mzo"
                     title="Charlie Puth - Smells Like Me (Official Audio)" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
-
                 <div style="text-align: center; margin-top: 1%; margin: auto;">
-
                     <a href="https://charlieputh.lnk.to/CHARLIEID" target="_blank">
                         <button class="getitnow">
                             <span>GET IT NOW</a></span>
                     </button>
                 </div>
             </div>
-
-
-
-
             <div style="text-align: center; background-color: black; margin-top: 1%;">
                 <h3 class="text-gray-100 text-lg py-px">6.Charlie Puth - Left And Right (feat. Jung Kook of BTS)
                     [Official Video]</h3>
@@ -220,19 +176,13 @@
                     title="Charlie Puth - Left And Right (feat. Jung Kook of BTS) [Official Video]" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
-
                 <div style="text-align: center; margin-top: 1%; margin: auto;">
-
                     <a href="https://charlieputh.lnk.to/CHARLIEID" target="_blank">
                         <button class="getitnow">
                             <span>GET IT NOW</a></span>
                     </button>
                 </div>
             </div>
-
-
-
-
             <div style="text-align: center; background-color: black; margin-top: 1%;">
                 <h3 class="text-gray-100 text-lg py-px">7.Charlie Puth - Loser (Official Music Video)
                     Audio]
@@ -250,48 +200,32 @@
                     </button>
                 </div>
             </div>
-
-
-
-
             <div style="text-align: center; background-color: black; margin-top: 1%;">
                 <h3 class="text-gray-100 text-lg py-px">8.Charlie Puth - When You're Sad I'm Sad (Official Audio)</h3>
                 <iframe width="100%" height="498" src="https://www.youtube.com/embed/pcqUZMgMnVM"
                     title="Charlie Puth - When You're Sad I'm Sad (Official Audio)" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
-
                 <div style="text-align: center; margin-top: 1%; margin: auto;">
-
                     <a href="https://charlieputh.lnk.to/CHARLIEID" target="_blank">
                         <button class="getitnow">
                             <span>GET IT NOW</a></span>
                     </button>
                 </div>
             </div>
-
-
-
-
             <div style="text-align: center; background-color: black; margin-top: 1%;">
                 <h3 class="text-gray-100 text-lg py-px">9.Charlie Puth - Marks On My Neck (Official Audio)</h3>
                 <iframe width="100%" height="498" src="https://www.youtube.com/embed/Ibx6cg2vTMk"
                     title="Charlie Puth - Marks On My Neck (Official Audio)" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
-
                 <div style="text-align: center; margin-top: 1%; margin: auto;">
-
                     <a href="https://charlieputh.lnk.to/CHARLIEID" target="_blank">
                         <button class="getitnow">
                             <span>GET IT NOW</a></span>
                     </button>
                 </div>
             </div>
-
-
-
-
             <div style="text-align: center; background-color: black; margin-top: 1%;">
                 <h3 class="text-gray-100 text-lg py-px">10.Charlie Puth - Tears On My Piano (Official Audio)</h3>
                 <iframe width="100%" height="498" src="https://www.youtube.com/embed/kX6wgd9QUxw"
@@ -300,17 +234,12 @@
                     allowfullscreen></iframe>
 
                 <div style="text-align: center; margin-top: 1%; margin: auto;">
-
                     <a href="https://charlieputh.lnk.to/CHARLIEID" target="_blank">
                         <button class="getitnow">
                             <span>GET IT NOW</a></span>
                     </button>
                 </div>
             </div>
-
-
-
-
             <div style="text-align: center; background-color: black; margin-top: 1%;">
                 <h3 class="text-gray-100 text-lg py-px">11.Charlie Puth - I Don't Think That I Like Her (Official Audio)
                 </h3>
@@ -318,19 +247,13 @@
                     title="Charlie Puth - I Don't Think That I Like Her (Official Audio)" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
-
                 <div style="text-align: center; margin-top: 1%; margin: auto;">
-
                     <a href="https://charlieputh.lnk.to/CHARLIEID" target="_blank">
                         <button class="getitnow">
                             <span>GET IT NOW</a></span>
                     </button>
                 </div>
             </div>
-
-
-
-
             <div style="text-align: center; background-color: black; margin-top: 1%;">
                 <h3 class="text-gray-100 text-lg py-px">12.Charlie Puth - No More Drama (Official Audio)</h3>
                 <iframe width="100%" height="498" src="https://www.youtube.com/embed/dFU2X5CFp5I"
@@ -346,18 +269,12 @@
                     </button>
                 </div>
             </div>
-
         </div>
-
-
-
-
         <!-- footer -->
-
         <div style="background-color: black;" class="flex items-center justify-center">
             <div class="m-2 max-w-5xl items-center">
                 <div class="flex flex-col items-center"> <img style="width: 10rem;" class="flex m-1"
-                        src="images/charlie_white_0.png" />
+                        src="images/cp.gif" />
                     <div class="m-2" 0>
 
                         <a href="https://www.facebook.com/charlieputh" target="_blank"
@@ -380,17 +297,14 @@
                             target="_blank"
                             class="w-9 h-10 text-center border-current border-2 text-rose-600 hover:text-black pt-1 inline-block"><img
                                 src="cpphotos/logos/apple-music-removebg-preview.png" alt=""></a>
-
-
                     </div>
                     <div class="flex md:flex-row flex-col">
                         <p class="hover:text-blue-600 text-gray-500 font-medium m-2"> <a href="index.html">Home</a> </p>
-                        <p class="hover:text-blue-600 text-gray-500 font-medium m-2"> <a
-                                href="charlieputhbio.html">Bio</a> </p>
                         <p class="hover:text-blue-600 text-gray-500 font-medium m-2"> <a href="musicvideo.html">Music +
-                                Video</a> </p>
+                            Video</a> </p>
+                            <p class="hover:text-blue-600 text-gray-500 font-medium m-2"> <a href="writen-by-CP.html">Written By Charlie Puth</a></p>
                         <p class="hover:text-blue-600 text-gray-500 font-medium m-2"> <a
-                                href="https://www.theuniversaldev.42web.io" target="_blank">Contact Us</a> </p>
+                                href="https://www.theuniversaldev.42web.io" target="_blank">Contact Dev</a> </p>
                         <!-- <p class="hover:text-blue-600 text-gray-500 font-medium m-2"> <a href="#"> Privacy Policy </a> </p> -->
                     </div>
                     <div style="text-align: center;" class="text-gray-100 font-medium mt-4 text-xs">&copy;
@@ -409,11 +323,7 @@
         </div>
         <script src="https://use.fontawesome.com/03f8a0ebd4.js"></script>
         <script src="https://cdn.tailwindcss.com"></script>
-
     </div>
-
-
-
     <!-- Scripts -->
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/jquery.dropotron.min.js"></script>
@@ -423,7 +333,5 @@
     <script src="assets/js/breakpoints.min.js"></script>
     <script src="assets/js/util.js"></script>
     <script src="assets/js/main.js"></script>
-
 </body>
-
 </html>
