--- a/ninetrackmind.html
+++ b/ninetrackmind.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <title>CHARLIE PUTH | Nine Track Mind | Fan made website</title>
     <meta charset="utf-8" />
@@ -15,13 +14,12 @@
     <link rel="shortcut icon" href="favicon.png" type="image/png">
     <!-- tailwind cdn -->
     <script src="https://cdn.tailwindcss.com"></script>
-
     <!-- loader css -->
     <style>
-        /* body{
+        body{
             background-color: black ;
         }
-         */
+        
         #preloader {
             height: 300px;
             width: 300px;
@@ -32,16 +30,12 @@
             bottom: 0;
             left: 0;
             right: 0;
-
         }
-
         #preloader img {
             width: 300px;
         }
-
         #fullpagecontent {
             display: none;
-
         }
     </style>
     <script>
@@ -50,11 +44,8 @@
             document.getElementById('fullpagecontent').style.display = "block";
         }
     </script>
-
 </head>
-
 <body class="homepage ">
-
     <div id="preloader">
         <!-- <img src="photos/logoTUD.png" alt="loader"> -->
         <!-- <h2> ooh ur still alive</h2> -->
@@ -62,12 +53,9 @@
     </div>
     <!-- this is loader div for content -->
     <div id="fullpagecontent">
-
         <!-- <div id="page-wrapper"> -->
-
         <!-- Header -->
         <div id="header">
-
             <!-- Inner -->
             <div class="inner">
                 <header>
@@ -75,7 +63,6 @@
                     <img style="width: 20rem;" src="images/NTM-desktop.gif" alt="" id="logo">
                 </header>
             </div>
-
             <!-- Nav -->
             <nav id="nav">
                 <ul>
@@ -151,9 +138,6 @@
             </div>
         </div>
 
-
-
-
         <div style="text-align: center; background-color: black;">
             <h3 class="text-gray-100 text-lg py-px">3.Charlie Puth - Marvin Gaye ft. Meghan Trainor [Official Video]
             </h3>
@@ -172,9 +156,6 @@
             </div>
         </div>
 
-
-
-
         <div style="text-align: center; background-color: black;">
             <h3 class="text-gray-100 text-lg py-px">4.Charlie Puth - Losing My Mind [Official Audio]
             </h3>
@@ -191,9 +172,6 @@
                 </button>
             </div>
         </div>
-
-
-
 
         <div style="text-align: center; background-color: black;">
             <h3 class="text-gray-100 text-lg py-px">5.Charlie Puth - We Don't Talk Anymore (feat. Selena Gomez)
@@ -214,9 +192,6 @@
             </div>
         </div>
 
-
-
-
         <div style="text-align: center; background-color: black;">
             <h3 class="text-gray-100 text-lg py-px">6.Charlie Puth - My Gospel [Official Audio]</h3>
             <iframe width="100%" height="480"
@@ -233,9 +208,6 @@
                 </button>
             </div>
         </div>
-
-
-
 
         <div style="text-align: center; background-color: black;">
             <h3 class="text-gray-100 text-lg py-px">7.Charlie Puth - Up All Night [Official Audio]</h3>
@@ -254,9 +226,6 @@
             </div>
         </div>
 
-
-
-
         <div style="text-align: center; background-color: black;">
             <h3 class="text-gray-100 text-lg py-px">8.Charlie Puth - Left Right Left [Official Audio]</h3>
             <iframe width="100%" height="480"
@@ -273,9 +242,6 @@
                 </button>
             </div>
         </div>
-
-
-
 
         <div style="text-align: center; background-color: black;">
             <h3 class="text-gray-100 text-lg py-px">9.Charlie Puth - Then There's You [Official Audio]</h3>
@@ -294,9 +260,6 @@
             </div>
         </div>
 
-
-
-
         <div style="text-align: center; background-color: black;">
             <h3 class="text-gray-100 text-lg py-px">10.Charlie Puth - Suffer [Official Audio]</h3>
             <iframe width="100%" height="480"
@@ -313,9 +276,6 @@
                 </button>
             </div>
         </div>
-
-
-
 
         <div style="text-align: center; background-color: black;">
             <h3 class="text-gray-100 text-lg py-px">11.Charlie Puth - As You Are feat. Shy Carter [Official Audio]h3>
@@ -334,9 +294,6 @@
                 </div>
         </div>
 
-
-
-
         <div style="text-align: center; background-color: black;">
             <h3 class="text-gray-100 text-lg py-px">12.Charlie Puth - Some Type of Love [Official Audio]</h3>
             <iframe width="100%" height="480"
@@ -353,9 +310,6 @@
                 </button>
             </div>
         </div>
-
-
-
 
         <div style="text-align: center; background-color: black;">
             <h3 class="text-gray-100 text-lg py-px">13.Charlie Puth - River [Official Audio]</h3>
@@ -407,13 +361,11 @@
             </div>
         </div>
 
-
         <!-- footer -->
-
         <div style="background-color: black;" class="flex items-center justify-center">
             <div class="m-2 max-w-5xl items-center">
                 <div class="flex flex-col items-center"> <img style="width: 10rem;" class="flex m-1"
-                        src="images/charlie_white_0.png" />
+                        src="images/cp.gif" />
                     <div class="m-2" 0>
 
                         <a href="https://www.facebook.com/charlieputh" target="_blank"
@@ -441,12 +393,11 @@
                     </div>
                     <div class="flex md:flex-row flex-col">
                         <p class="hover:text-blue-600 text-gray-500 font-medium m-2"> <a href="index.html">Home</a> </p>
-                        <p class="hover:text-blue-600 text-gray-500 font-medium m-2"> <a
-                                href="charlieputhbio.html">Bio</a> </p>
                         <p class="hover:text-blue-600 text-gray-500 font-medium m-2"> <a href="musicvideo.html">Music +
                                 Video</a> </p>
+                                <p class="hover:text-blue-600 text-gray-500 font-medium m-2"> <a href="writen-by-CP.html">Written By Charlie Puth</a></p>
                         <p class="hover:text-blue-600 text-gray-500 font-medium m-2"> <a
-                                href="https://www.theuniversaldev.42web.io" target="_blank">Contact Us</a> </p>
+                                href="https://www.theuniversaldev.42web.io" target="_blank">Contact Dev</a> </p>
                         <!-- <p class="hover:text-blue-600 text-gray-500 font-medium m-2"> <a href="#"> Privacy Policy </a> </p> -->
                     </div>
                     <div style="text-align: center;" class="text-gray-100 font-medium mt-4 text-xs">&copy;
@@ -465,11 +416,7 @@
         </div>
         <script src="https://use.fontawesome.com/03f8a0ebd4.js"></script>
         <script src="https://cdn.tailwindcss.com"></script>
-
     </div>
-
-
-
     <!-- Scripts -->
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/jquery.dropotron.min.js"></script>
@@ -479,7 +426,5 @@
     <script src="assets/js/breakpoints.min.js"></script>
     <script src="assets/js/util.js"></script>
     <script src="assets/js/main.js"></script>
-
 </body>
-
 </html>
