--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                         <p>
                             CHARLIE PUTH - THAT'S NOT HOW THIS WORKS (FEAT. DAN + SHAY) [official music video]
                         </p>
-                        <a href="https://charlieputh.lnk.to/CHARLIEID" target="_blank">
+                        <a href="https://charlieputh.lnk.to/ThatsNotHowThisWorksID" target="_blank">
                             <button class="getitnow">
                                 <span>GET IT NOW</a></span>
                         </button>
