--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <!-- Inner -->
             <div class="inner">
                 <header>
-                    <h1><a href="#" id="logo">Lipstick</a></h1>
+                    <h1><a href="#" id="logo">HERO</a></h1>
                     <hr>
                     <p>OUT NOW</p>
                 </header>
@@ -127,22 +127,22 @@
             <img class="homeimg" src="images/charlie1500x500.jpg" alt="img charlie puth">
             <img class="homeimg" src="cpphotos/thatshilariousbig.jpg" alt="img charlie puth">
         </div> -->
-        <div>
+        <!-- <div>
             <img style="width: 100%;" src="images/lipstick1500x500.jfif" alt="Lipstick">
-        </div>
+        </div> -->
         <div style="background-color: black ; text-align: center; ">
             <!-- <h2 style="color: white;font-weight: 200; font-size: 2rem;">CHARLIE The Album</h2> -->
             <!-- <div class="flex flex-col items-center">
                 <img style="width: 30rem;" class="flex m-1" src="images/lipstick-art.jfif" />
             </div> -->
-            <a href="https://charlieputh.lnk.to/LipstickAW" target="_blank">
+            <a href="https://charlieputh.lnk.to/HeroID" target="_blank">
                 <button style="margin-top: 20px;" class="getitnow">
                     <span>LISTEN NOW</a></span>
                 </button>
-            <a href="https://youtu.be/Azo4AvIjkmQ" target="_blank">
+            <!-- <a href="https://youtu.be/Azo4AvIjkmQ" target="_blank">
                 <button style="margin-top: 20px;" class="getitnow">
                     <span>WATCH NOW</a></span>
-                </button>
+                </button> -->
         </div>
         <div style="background-color: black;">
             <div class="max-w-2xl mx-auto py-16 px-4 sm:py-24 sm:px-6 lg:max-w-7xl lg:px-8">
