--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <section id="banner">
             <header>
                 <h2>Hi. You're looking at <strong>CHARLIE PUTH</strong>.</h2>
-                <p>A responsive website by <a href="https://theuniversaldev.42web.io" target="_blank">THE UNIVERSAL DEV</a></p>
+                <p>A responsive website by <a href="https://theuniversaldev.42web.io" target="_blank">DEV EALIYA</a></p>
                 </header>
         </section> -->
         <!-- <div style="background-color: black;">
@@ -318,8 +318,7 @@
                         <h1 class="text-gray-100">All credits to Charlie & his team.</h1>
                         &copy;
                         <script>document.write("" + new Date().getFullYear(), "");</script>
-                        <a href="https://www.theuniversaldev.42web.io" target="_blank" class="text-blue-600">THE
-                            UNIVERSAL DEV &trade;</a>
+                        <a href="https://www.theuniversaldev.42web.io" target="_blank" class="text-blue-600">DEV EALIYA                      </a>
                         <h1 class="text-gray-100">All rights reserved</h1>
                     </div>
                 </div>
