--- a/voicenotes.html
+++ b/voicenotes.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>CHARLIE PUTH | Voicenotes | Fan made website</title>
+    <title>CHARLIE PUTH | Voicenotes | DEV EALIYA</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
@@ -375,8 +375,7 @@
                         <h1 class="text-gray-100">All credits to Charlie & his team.</h1>
                         &copy;
                         <script>document.write("" + new Date().getFullYear(), "");</script>
-                        <a href="https://www.theuniversaldev.42web.io" target="_blank" class="text-blue-600">THE
-                            UNIVERSAL DEV &trade;</a>
+                        <a href="https://www.theuniversaldev.42web.io" target="_blank" class="text-blue-600">DEV EALIYA                      </a>
                         <h1 class="text-gray-100">All rights reserved</h1>
                     </div>
                 </div>
